revise python code to update SWAT parameters

--- a/aTools/python/fmaster_SWAT_updatePAR_Runoff/master.ini
+++ b/aTools/python/fmaster_SWAT_updatePAR_Runoff/master.ini
@@ -4,10 +4,10 @@
 #File 2: subbasin IDs in each HUC8:
 	master_HUC8_SUB.dat
 #File 3: # of HRUs in each subbasin:
-	master_SUB_HRU_BC1.dat
+	master_SUB_HRU_HH3_new.dat
 #File 4: SWAT parameter info: 
 	master_PAR.dat
 #INPUT DIR
-	C:\WGS\TRB\TRB_SWAT_BC1\Scenarios\Default\TxtInOut
+	/Users/wg4/Documents/WORK/SWATIO_TRB_HH3_new
 #OUTPUT DIR
-	C:\WGS\TRB_SWAT_RUN\SWATIO_TRB_BC1_updateWATER
+	/Users/wg4/Documents/WORK/SWATIO_TRB_HH3_new_updatewater
